...
              Text(
                local.not_logged_subtitle,
                style: const TextStyle(fontSize: 16, color: Colors.black54),
              ),
              const SizedBox(height: 20),
              ElevatedButton(
                key: const Key('goToLoginButton'),
                onPressed: () {
                  Navigator.pushReplacementNamed(context, '/login');
                },
                child: Text(local.go_to_login_button),
              ),
            ],
...
        levelText = '';
    }

    return DefaultTabController(
      length: 3,
      child: Scaffold(
        key: const Key('userPage'),
        appBar: AppBar(


          title: Text(local.profile_page_title),
          centerTitle: true,
          actions: [
...
                title: Text(local.profile_page_title, style: optionStyle),
                onTap: () {
                  Navigator.pop(context);
                },
              ),
              ListTile(
                key: const Key('openSearchPageButton'),
                leading: Icon(
                  Icons.search,
                  color: Theme.of(context).colorScheme.primary,
                ),
                title: Text(local.search_page_title, style: optionStyle),
                onTap: () {
...
