...
    final bool isFocused = _focusNode.hasFocus;
    final bool hasText = _searchController.text.isNotEmpty;
    final local = AppLocalizations.of(context)!;
    super.build(context);

    return Scaffold(
        key: const Key('searchPage'),
      appBar: AppBar(title: Text(local.search_page_title), centerTitle: true),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          children: [
            Row(
              children: [
                // Search box
                Expanded(
                  child: TextField(
                    key: const Key('searchTextField'),
                    controller: _searchController,
                    focusNode: _focusNode, // To manage focus state
                    decoration: InputDecoration(
                      hintText: isFocused
                          ? ''
                          : local
...

            SingleChildScrollView(
              scrollDirection: Axis.horizontal,
              child: Row(
                children: [
                  Filter(
                    key: const Key('UserModeFilter'),
                    mode: SearchMode.users,
                    selectedMode: _searchMode,
                    label: local.user_label,
                    onSelected: _onSearchModeChanged,
                  ),
                  const SizedBox(width: 8),
...
