...
      return Scaffold(body: Center(child: Text(local.user_not_found)));
    }

    final u = user!;

    return Scaffold(
        key: const Key('userPublicPage'),
      appBar: AppBar(
        title: Text(u.username),
        centerTitle: true,
        actions: [
          FutureBuilder<bool>(
            future: context.read<UserController>().isFollowing(u.uid),
...
